[gd_scene load_steps=3 format=3 uid="uid://1qmiesuse6hx"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_i3iti"]
[ext_resource type="Script" path="res://scripts/player_grid.gd" id="1_pmch3"]

[node name="Game" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i3iti")

[node name="StatusPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Status" type="RichTextLabel" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="PlayerGrid" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_pmch3")
columns_for_child_count = Array[int]([1, 1, 2, 2, 2, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8])

[node name="GameOver" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[connection signal="child_order_changed" from="PlayerGrid" to="PlayerGrid" method="_on_children_changed"]
